        details of an object, instead of showing all details at once.
      Due to the new layout, DDD now requires less width and height.
      If you already have a `~/.dddinit' file, resize DDD manually and
      save options.
    - Display shortcuts.  Once you have changed `p' to `(char *) p'
      manually, DDD provides a menu shortcut for converting arbitrary
      values to `(char *)'.
    - Support for debugging processes running outside of DDD.  You can
      attach to a running process, examine it, and resume execution.
    - Improved online manuals:
      + Multiple manual browsers are supported.
      + Manual browsers are realized as top-level windows.
      + DDD no longer blocks while the manual is uncompressed and formatted.
      + DDD manuals are now stored in `gzip' format, saving space in
        executables.
    - New `What Next' help.  Gives a hint on what to do next,
      depending on current state.  Useful for beginners.
    - Data displayed in the data window is now highlighted whenever it
      changes.
    - User-defined DDD commands.  DDD now provides a simple facility
      that allows the inferior debugger to execute DDD commands.  For
      details, see `User-Defined Commands' in the DDD manual.
    - For `Continue Until Here', DDD now sets a temporary breakpoint
      and continues (instead of using the GDB `until' command).  If
      the temporary breakpoint is not reached, it is deleted.
    - Using GDB, you can now alter the current execution position
      interactively - just drag and drop the execution arrow.  This
      allows you to back up - perhaps with more breakpoints set-over a
      portion of a program that has already executed, in order to
      examine its execution in more detail.
    - Breakpoints can be dragged and dropped, too.
    - Improved display of breakpoints and execution positions:
      + The current execution position is now properly cleared if
        undetermined (no source, program terminated, etc.)